Native/Test/KL/error-boolean-or-lvalue.out
error-boolean-or-lvalue.kl:10:3: error: cannot resolve call for foo(Integer)
candidates are:
  foo(io Integer)
